add method to use further pretrained model for fine-tuning

--- a/semeval_testings.ipynb
+++ b/semeval_testings.ipynb
@@ -187,7 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: upycli in /Users/robertlange/Library/CloudStorage/OneDrive-Persönlich/Desktop/Studium/Behind the Secrets of LLMs/Code/.venv/lib/python3.9/site-packages (0.2.11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install upycli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +217,8 @@
     "import torch\n",
     "import transformers\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from transformers import RobertaModel, RobertaTokenizer, TrainingArguments, Trainer\n",
+    "from transformers import RobertaModel, RobertaTokenizer, TrainingArguments, Trainer, RobertaForSequenceClassification\n",
+    "from utilities import CustomClassifier\n",
     "import logging\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -435,6 +453,78 @@
     "        classifier = self.classifier(pooler)\n",
     "        output = self.sigmoid(classifier)\n",
     "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Pretrained RoBerta Model with Custom Attention Head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at ./results/roberta-base_2025-01-03_17-14-47/best_model and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.6937, grad_fn=<BinaryCrossEntropyWithLogitsBackward0>),\n",
+       " tensor([[ 0.0523,  0.0187,  0.0494, -0.2530, -0.0646],\n",
+       "         [-0.0615,  0.0485,  0.2097,  0.0147, -0.0346]],\n",
+       "        grad_fn=<AddmmBackward0>))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "model = CustomClassifier(model_name = \"./results/roberta-base_2025-01-03_17-14-47/best_model\", model_type = RobertaModel, classifier_size = 768)\n",
+    "\n",
+    "# initialize LazyLayer \n",
+    "dummys = torch.zeros((2, 512), dtype=torch.long)\n",
+    "label_dummys = torch.zeros((2, 5), dtype=torch.float)\n",
+    "\n",
+    "model(label_dummys, dummys, dummys, dummys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Pretrained RoBerta Model with RobertForSequenceClassification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at ./results/roberta-base_2025-01-03_17-14-47/best_model and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = RobertaTokenizer.from_pretrained(\"./results/roberta-base_2025-01-03_17-14-47/best_model\")\n",
+    "\n",
+    "model = RobertaForSequenceClassification.from_pretrained(\"./results/roberta-base_2025-01-03_17-14-47/best_model\", num_labels = 5)"
    ]
   },
   {
